--- a/index.html
+++ b/index.html
@@ -683,32 +683,49 @@
       padding: 0px 0px 10px 0px!important;
     }
   
-    .input-lifted {
-      position: fixed !important;
-      z-index: 9999 !important;
-      top: 10px; /* small space above keyboard */
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      max-width: 400px;
-      transition: all 0.25s ease;
-      background: rgba(0,0,0,0.85);
-      padding: 12px;
-      border-radius: 16px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .input-lifted input {
-      width: 100%;
-      padding: 10px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
+#customKeyboard {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 25%;        /* initial width: 1/4 screen */
+  height: 25%;       /* initial height: 1/4 screen */
+  background: #222;
+  border-radius: 10px 0 0 0;
+  display: none;
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 5px;
+  z-index: 9999;
+  box-shadow: 0 -2px 10px rgba(0,0,0,0.5);
+  touch-action: none;  /* allow drag on mobile */
+}
 
+#customKeyboard button {
+  flex: 1 0 30%;
+  margin: 2px;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  background: #444;
+  color: white;
+}
+
+#customKeyboard button:active {
+  background: #666;
+}
+
+/* Drag handle at top */
+#customKeyboardHeader {
+  width: 100%;
+  height: 20px;
+  cursor: grab;
+  background: rgba(255,255,255,0.1);
+  border-radius: 5px 5px 0 0;
+  margin-bottom: 5px;
+}
+  
+}
 </style>
 
 
@@ -970,35 +987,6 @@ document.addEventListener("DOMContentLoaded", () => {
     }
   });
 });
-  
-  
-  // Find all inputs on page
-document.querySelectorAll('input').forEach(input => {
-  input.addEventListener('focus', () => {
-    // Find the nearest parent wrapper (or the input itself)
-    let wrapper = input.closest('.input-lift-wrapper') || input.parentElement;
-
-    // Add lifted class
-    wrapper.classList.add('input-lifted');
-
-    // Scroll into view for mobile keyboard
-    setTimeout(() => {
-      wrapper.scrollIntoView({ behavior: 'smooth', block: 'center' });
-    }, 100);
-  });
-
-  input.addEventListener('blur', () => {
-    let wrapper = input.closest('.input-lift-wrapper') || input.parentElement;
-
-    setTimeout(() => {
-      // Remove class if no input inside is focused
-      if (![...wrapper.querySelectorAll('input')].some(i => i === document.activeElement)) {
-        wrapper.classList.remove('input-lifted');
-      }
-    }, 0);
-  });
-});
-  
 </script>
 
 
@@ -1389,7 +1377,7 @@ function centerPlayerVertically() {
 </script>
 
 
-
+<!-- Score Modal -->
 <script type="module">
       import { createScoreModal, showScore } from "./ui/ui-score.js";
       
@@ -1400,6 +1388,16 @@ function centerPlayerVertically() {
       document.getElementById("showScoreBtn").addEventListener("click", () => {
         showScore("scoreModal");
       });
+</script>
+
+
+<!-- Keyboard -->
+<script type="module">   
+    import { initCustomKeyboard } from './keyboard.js';
+    
+    document.addEventListener('DOMContentLoaded', () => {
+      initCustomKeyboard();
+    });
 </script>
 
 
