--- a/index.html
+++ b/index.html
@@ -683,48 +683,37 @@
       padding: 0px 0px 10px 0px!important;
     }
   
-#customKeyboard {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 25%;        /* initial width: 1/4 screen */
-  height: 25%;       /* initial height: 1/4 screen */
-  background: #222;
-  border-radius: 10px 0 0 0;
-  display: none;
-  flex-wrap: wrap;
-  padding: 10px;
-  gap: 5px;
-  z-index: 9999;
-  box-shadow: 0 -2px 10px rgba(0,0,0,0.5);
-  touch-action: none;  /* allow drag on mobile */
-}
+    #customKeyboard {
+      position: fixed;
+      bottom: 0;
+      right: 0;
+      background: #222;
+      border-radius: 10px 0 0 0;
+      /* REMOVE display:none */
+      flex-wrap: wrap;
+      padding: 10px;
+      gap: 5px;
+      z-index: 9999;
+      box-shadow: 0 -2px 10px rgba(0,0,0,0.5);
+      touch-action: none;
+    }
 
-#customKeyboard button {
-  flex: 1 0 30%;
-  margin: 2px;
-  padding: 10px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  background: #444;
-  color: white;
-}
+    #customKeyboard button {
+      flex: 1 0 30%;
+      margin: 2px;
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      background: #444;
+      color: white;
+      pointer-events: auto; /* keys remain clickable */
+    }
 
-#customKeyboard button:active {
-  background: #666;
-}
+    #customKeyboard button:active {
+      background: #666;
+    }
 
-/* Drag handle at top */
-#customKeyboardHeader {
-  width: 100%;
-  height: 20px;
-  cursor: grab;
-  background: rgba(255,255,255,0.1);
-  border-radius: 5px 5px 0 0;
-  margin-bottom: 5px;
-}
-  
 }
 </style>
 
