--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
            cursor: pointer;
            color: gray;
            font-size: 20px;
-           display: inline-block;
+           display: none;
            text-align: center;
            float: right;
          ">
